--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <canvas id="canvas"></canvas>
     <script>
     if ('serviceWorker' in navigator) {  
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('/js/sw.js')
         .then(function (registration) {    
           //console.log('wlcm', registration.scope);  
         }).catch(function (err) {    
