--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 	<head>
     <!-- Copyright © By Thibaut LOMBARD, from Lombard Web: https://github.com/Lombard-Web-Services -->
@@ -77,7 +76,7 @@
     <canvas id="canvas"></canvas>
     <script>
     if ('serviceWorker' in navigator) {  
-      navigator.serviceWorker.register('/Insect-Repeller/js/sw.js')
+      navigator.serviceWorker.register('/Insect-Repeller/sw.js')
         .then(function (registration) {    
         }).catch(function (err) {    
         });
