--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <!-- Fly SVG : Peter Selinger 2001-2017 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=487">
-    <meta http-equiv="Cache-control" content="no-cache">
     <title>Insect Repeller By Thibaut LOMBARD</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="img/manifest.json">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://lombard-web-services.github.io/Insect-Repeller/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://lombard-web-services.github.io/Insect-Repeller/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://lombard-web-services.github.io/Insect-Repeller/img/favicon-16x16.png">
     <!-- Twitter sites -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:description" content="Insect repeller App (Progressive Web App)"/>
@@ -44,6 +42,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
     <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="https://lombard-web-services.github.io/Insect-Repeller/img/manifest.json">
     <style type="text/css">
       #controls,body{display:flex;height:100%}.btn,a{text-decoration:none}#controls,.btn{color:#fff;margin:auto}.btn::before,body{width:100%;height:100%}.btn,.debug{text-align:center}*,.mouche{padding:0}*{margin:0;box-sizing:border-box}body{box-pack:center;justify-content:center;box-align:center;align-items:center;overflow:hidden;font-family:"Helvetica Neue",sans-serif}#canvas{position:absolute;top:0;left:0;background:radial-gradient(circle,#020024 0,#525151 0,#000 100%)}#controls,.btn,.mouche{position:relative}#controls{width:70%;flex-direction:column;top:0;left:0;z-index:2;background-color:#6666;padding:2em 2em 0;border-radius:2rem;font-size:1.2em}#led,#led.on{display:none}#controls button,#controls select{font-size:1.2em;padding:.5em 0}#controls #led,#controls input,#controls select{margin-bottom:1em}#controls button{border:0}.btn,.btn::before{border-radius:50%}#controls label{margin-bottom:.1em}.displayed{visibility:hidden;display:block}#led{height:.2em;background-color:#e23}#led.on{background-color:#49cb61}.btn{display:box;width:15rem;height:15rem;background:radial-gradient(circle,#020024 0,#8f8c8c 0,#000 100%);box-shadow:0 .2em .2em rgba(0,0,0,.3)}.btn::before{display:block;position:absolute;z-index:-1;background:#ff0;opacity:0;content:'';animation:1s infinite pulse}.btn:hover::before{animation:none;opacity:.4;transform:scale(1.3)}.btn.is-clicked{background:linear-gradient(to bottom,gray 0,#696969 100%)}.btn.is-clicked:before{animation:1s blastOut}@keyframes pulse{from{transform:scale(1);opacity:.4}to{transform:scale(1.3);opacity:0}}@keyframes blastOut{from{transform:scale(.9);opacity:.4}to{transform:scale(10);opacity:0}}.mouche{width:60%;background-image:url(img/mouche.svg);background-size:cover;height:80%;display:inline-block;margin:0 auto;top:1em}
     </style>
