--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- CSS3 button : https://codepen.io/rodhamjun/pen/PpYYYd -->
     <!-- Fly SVG : Peter Selinger 2001-2017 -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=600, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
+    <meta name="viewport" content="width=600">
     <title>Insect Repeller By Thibaut LOMBARD</title>
     <link rel="apple-touch-icon" sizes="57x57" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-60x60.png">
