--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- CSS3 button : https://codepen.io/rodhamjun/pen/PpYYYd -->
     <!-- Fly SVG : Peter Selinger 2001-2017 -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=490">
+    <meta name="viewport" content="width=500">
     <title>Insect Repeller By Thibaut LOMBARD</title>
     <link rel="apple-touch-icon" sizes="57x57" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://lombard-web-services.github.io/Insect-Repeller/img/apple-icon-60x60.png">
@@ -44,7 +44,153 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="https://lombard-web-services.github.io/Insect-Repeller/img/manifest.json">
     <style type="text/css">
-      #controls,body{display:flex;height:100%}.btn,a{text-decoration:none}#controls,.btn{color:#fff;margin:auto}.btn::before,body{width:100%;height:100%}.btn,.debug{text-align:center}*,.mouche{padding:0}*{margin:0;box-sizing:border-box}body{box-pack:center;justify-content:center;box-align:center;align-items:center;overflow:hidden;font-family:"Helvetica Neue",sans-serif}#canvas{position:absolute;top:0;left:0;background:radial-gradient(circle,#020024 0,#525151 0,#000 100%)}#controls,.btn,.mouche{position:relative}#controls{width:70%;flex-direction:column;top:0;left:0;z-index:2;background-color:#6666;padding:2em 2em 0;border-radius:2rem;font-size:1.2em}#led,#led.on{display:none}#controls button,#controls select{font-size:1.2em;padding:.5em 0}#controls #led,#controls input,#controls select{margin-bottom:1em}#controls button{border:0}.btn,.btn::before{border-radius:50%}#controls label{margin-bottom:.1em}.displayed{visibility:hidden;display:block}#led{height:.2em;background-color:#e23}#led.on{background-color:#49cb61}.btn{display:box;width:15rem;height:15rem;background:radial-gradient(circle,#020024 0,#8f8c8c 0,#000 100%);box-shadow:0 .2em .2em rgba(0,0,0,.3)}.btn::before{display:block;position:absolute;z-index:-1;background:#ff0;opacity:0;content:'';animation:1s infinite pulse}.btn:hover::before{animation:none;opacity:.4;transform:scale(1.3)}.btn.is-clicked{background:linear-gradient(to bottom,gray 0,#696969 100%)}.btn.is-clicked:before{animation:1s blastOut}@keyframes pulse{from{transform:scale(1);opacity:.4}to{transform:scale(1.3);opacity:0}}@keyframes blastOut{from{transform:scale(.9);opacity:.4}to{transform:scale(10);opacity:0}}.mouche{width:60%;background-image:url(img/mouche.svg);background-size:cover;height:80%;display:inline-block;margin:0 auto;top:1em}
+#controls,body{
+    display:flex;
+    height:100%
+}
+ @media all and (min-width:500px) and (max-width: 3000px) {
+ #controls {
+	width:500px;
+    display:flex;
+    height:100%
+}
+ }
+.btn,a{
+    text-decoration:none
+}
+#controls,.btn{
+    color:#fff;
+    margin:auto
+}
+.btn::before,body{
+    width:100%;
+    height:100%
+}
+.btn,.debug{
+    text-align:center
+}
+*,.mouche{
+    padding:0
+}
+*{
+    margin:0;
+    box-sizing:border-box
+}
+body{
+    box-pack:center;
+    justify-content:center;
+    box-align:center;
+    align-items:center;
+    overflow:hidden;
+    font-family:"Helvetica Neue",sans-serif
+}
+#canvas{
+    position:absolute;
+    top:0;
+    left:0;
+    background:radial-gradient(circle,#020024 0,#525151 0,#000 100%)
+}
+#controls,.btn,.mouche{
+    position:relative
+}
+#controls{
+    width:70%;
+    flex-direction:column;
+    top:0;
+    left:0;
+    z-index:2;
+    background-color:#6666;
+    padding:2em 2em 0;
+    border-radius:2rem;
+    font-size:1.2em
+}
+#led,#led.on{
+    display:none
+}
+#controls button,#controls select{
+    font-size:1.2em;
+    padding:.5em 0
+}
+#controls #led,#controls input,#controls select{
+    margin-bottom:1em
+}
+#controls button{
+    border:0
+}
+.btn,.btn::before{
+    border-radius:50%
+}
+#controls label{
+    margin-bottom:.1em
+}
+.displayed{
+    visibility:hidden;
+    display:block
+}
+#led{
+    height:.2em;
+    background-color:#e23
+}
+#led.on{
+    background-color:#49cb61
+}
+.btn{
+    display:box;
+    width:15rem;
+    height:15rem;
+    background:radial-gradient(circle,#020024 0,#8f8c8c 0,#000 100%);
+    box-shadow:0 .2em .2em rgba(0,0,0,.3)
+}
+.btn::before{
+    display:block;
+    position:absolute;
+    z-index:-1;
+    background:#ff0;
+    opacity:0;
+    content:'';
+    animation:1s infinite pulse
+}
+.btn:hover::before{
+    animation:none;
+    opacity:.4;
+    transform:scale(1.3)
+}
+.btn.is-clicked{
+    background:linear-gradient(to bottom,gray 0,#696969 100%)
+}
+.btn.is-clicked:before{
+    animation:1s blastOut
+}
+@keyframes pulse{
+    from{
+        transform:scale(1);
+        opacity:.4
+    }
+    to{
+        transform:scale(1.3);
+        opacity:0
+    }
+}
+@keyframes blastOut{
+    from{
+        transform:scale(.9);
+        opacity:.4
+    }
+    to{
+        transform:scale(10);
+        opacity:0
+    }
+}
+.mouche{
+    width:60%;
+    background-image:url(img/mouche.svg);
+    background-size:cover;
+    height:80%;
+    display:inline-block;
+    margin:0 auto;
+    top:1em
+}
+ 
     </style>
     <script src="https://lombard-web-services.github.io/Insect-Repeller/js/jquery.min.js"></script>
     <script src="https://lombard-web-services.github.io/Insect-Repeller/js/repeller.js"></script>
