--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     height:100%
 }
  @media all and (min-width:500px) and (max-width: 3000px) {
- #controls {
-	width:500px;
+ #controls,body {
     display:flex;
     height:100%
 }
@@ -84,6 +83,7 @@ body{
     overflow:hidden;
     font-family:"Helvetica Neue",sans-serif
 }
+
 #canvas{
     position:absolute;
     top:0;
