--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <meta name="description" content="A progressive App , with ultrasounds to repell insects" />
     <meta name="keywords" content="Insect repeller script with ultrasounds ">
     <meta name="robots" content="index,follow">
-    <meta name="copyright" content="Colas World">
-    <meta property="og:title" content="Votre référence en supervision" />
+    <meta name="copyright" content="Lombard Web">
+    <meta property="og:title" content="Insect Repeller, repell insects with ultrasounds" />
     <meta property="og:site_name" content="lombard-web-services.github.io/Insect-Repeller/"/>
     <meta property="og:url" content="https://lombard-web-services.github.io/Insect-Repeller/" />
     <meta property="og:description" content="Insect repeller app" />
